refactor: 將元件拆分為獨立檔案

--- a/index.html
+++ b/index.html
@@ -139,193 +139,14 @@
             :product-tags="productTags"
             :temp-product="tempProduct"
             :dev-mode="isDevMode"
+            @init-product-modal="initProductModal"
             @save-product="saveProduct"></product-modal>
         <confirm-modal 
             :button-status="isButtonDisabled"
-            :temp-product="tempProduct" 
+            :temp-product="tempProduct"
+            @init-confirm-modal="initConfirmModal"
             @remove-product="removeProduct"></confirm-modal>
     </div>
-
-    <!-- 分頁 -->
-
-    <script type="text/x-template" id="pagination">
-
-    <nav aria-label="page navigation">
-        <ul class="pagination">
-            <li class="page-item" :class="{ 'disabled': currentPage - 1 < 1 }">
-                <a class="page-link" href="#" aria-label="Previous" @click.prevent="switchPage(currentPage - 1)">
-                <span aria-hidden="true">&laquo;</span></a>
-            </li>
-            <template v-for="i in pages" :key="i">
-                <li class="page-item" :class="{ 'active': currentPage === i }">
-                    <a class="page-link" href="#" :aria-label="i" @click.prevent="switchPage(i)">
-                    {{ i }}</a>
-                </li>
-            </template>
-            <li class="page-item" :class="{ 'disabled': currentPage + 1 > pages }">
-                <a class="page-link" href="#" aria-label="Next" @click.prevent="switchPage(currentPage + 1)">
-                <span aria-hidden="true">&raquo;</span></a>
-            </li>
-        </ul>
-    </nav>
-
-    </script>
-
-    <!-- 新增、編輯視窗 -->
-
-    <script type="text/x-template" id="product-modal">
-
-    <div class="modal modal-lg fade" aria-hidden="true" tabindex="-1" id="normal-modal">
-        <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="mb-0" v-if="tempProduct.title">{{ tempProduct.title }}</h5>
-                    <button type="button" class="btn-close" aria-label="Close" @click="hideModal" :disabled="buttonStatus"></button>
-                </div>
-                <div class="modal-body">
-                    <form>
-                        <div class="row">
-                            <div class="col-md-6">
-                                <!-- 主圖網址 ( imageUrl ) -->
-                                <div class="mb-3">
-                                    <label for="imageUrl" class="form-label">主圖網址</label>
-                                    <input type="text" id="imageUrl" class="form-control mb-3" v-model="product.imageUrl">
-                                    <template v-if="product.imageUrl">
-                                        <img class="w-100" :src="product.imageUrl" :alt="product.title">
-                                    </template>
-                                </div>
-                                <!-- 副圖 ( imagesUrl ) -->
-                                <div class="mb-3" v-if="imagesUrl.length">
-                                    <p>副圖網址 ( 最多五張 )</p>
-                                    <div class="d-flex flex-column gap-3">
-                                        <template v-for="(img, idx) in imagesUrl">
-                                            <div class="position-relative">
-                                                <input type="text" class="form-control pe-5" :key="img" v-model="imagesUrl[idx]">
-                                                <button type="button" class="btn border-0 btn-remove" @click="removeInput('imagesUrl', idx)">
-                                                    <span class="material-icons">clear</span>
-                                                </button>
-                                            </div>
-                                            <img class="w-100" :src="img" alt="img" v-if="img">
-                                        </template>
-                                    </div>
-                                </div>
-                                <div class="alert bg-light" v-if="devMode">{{ imagesUrl }}</div>
-                                <!-- 上傳圖片欄位 -->
-                                <form enctype="multipart/form-data" method="post" v-if="displayUploadForm">
-                                    <div class="border rounded-2 p-3 mb-3">
-                                        <input type="file" class="form-control w-100 mb-3" name="file-to-upload" ref="image">
-                                        <p class="fs-7 text-muted">僅限 jpg、jpeg、png 格式，檔案大小限制為 3MB 以下</p>
-                                        <div class="text-end">
-                                            <button type="button" class="btn btn-outline-secondary" @click="uploadImage" :disabled="imagesUrl.length > 4">確認上傳</button>
-                                        </div>
-                                    </div>
-                                </form>
-                                <div class="d-flex gap-2" v-if="imagesUrl.length < 5">
-                                <button type="button" class="btn btn-primary w-100" @click="imagesUrl.push('')"
-                                        :disabled="buttonStatus">新增圖片</button>
-                                <button type="button" class="btn btn-secondary w-100" @click="displayUploadForm = !displayUploadForm"
-                                        :disabled="buttonStatus">上傳圖片</button>
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="mb-3">
-                                    <label for="title" class="form-label">產品名稱</label>
-                                    <input type="text" id="title" class="form-control" v-model="product.title">
-                                </div>
-                                <div class="mb-3">
-                                    <label for="description" class="form-label">產品描述</label>
-                                    <textarea id="description" class="form-control" cols="30" rows="5" v-model="product.description"></textarea>
-                                </div>
-                                <div class="mb-3">
-                                    <label for="content" class="form-label">產品說明</label>
-                                    <textarea id="content" class="form-control" cols="30" rows="5" v-model="product.content"></textarea>                             
-                                </div>
-                                <div class="row mb-3">
-                                    <div class="col-6">
-                                        <label for="category" class="form-label">產品分類</label>
-                                        <input type="text" id="category" class="form-control" v-model="product.category">
-                                    </div>
-                                    <div class="col-6">
-                                        <label for="unit" class="form-label">產品單位</label>
-                                        <input type="text" id="unit" class="form-control" v-model="product.unit">
-                                    </div>
-                                </div>
-                                <div class="row mb-3">
-                                    <div class="col-md-6">
-                                        <label for="origin_price" class="form-label">原價</label>
-                                        <input type="number" id="origin_price" class="form-control" v-model.number="product.origin_price">
-                                    </div>
-                                    <div class="col-md-6">
-                                        <label for="price" class="form-label">售價</label>
-                                        <input type="number" id="price" class="form-control" v-model.number="product.price">
-                                    </div>
-                                </div>
-                                <div class="d-flex justify-content-between align-items-center mb-3">
-                                    <p class="mb-0">產品標籤</p>
-                                    <button type="button" class="btn btn-sm btn-secondary" @click="tags.push('')" :disabled="buttonStatus">新增標籤</button>
-                                </div>
-                                <!-- 可重複利用的標籤 -->
-                                <div class="d-flex flex-wrap gap-1 mb-3" v-if="productTags.length">
-                                    <button type="button" class="btn badge bg-light px-3 py-2 text-muted"
-                                            v-for="tag in productTags" :key="tag" @click="tags.push(tag)">{{ tag }}</button>
-                                </div>
-                                <div class="alert bg-light mt-3" v-if="devMode">{{ tags }}</div>
-                                <div v-if="tags.length">
-                                    <div class="row row-cols-2 gy-3">
-                                        <div class="col" v-for="(tag, idx) in tags" :key="tag">
-                                            <div class="position-relative">
-                                                <input type="text" class="form-control" v-model="tags[idx]">
-                                                <button type="button" class="btn border-0 btn-remove" @click="removeInput('tags', idx)">
-                                                    <span class="material-icons">clear</span>
-                                                </button>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </form>
-                </div>
-                <div class="modal-footer justify-content-between">
-                    <div>
-                        <input type="checkbox" id="is_enabled" class="form-check-input me-2" v-model="product.is_enabled">
-                        <label for="is_enabled" class="form-check-label">是否啟用</label>
-                    </div>
-                    <div>
-                        <button type="button" class="btn btn-primary me-2" @click="saveProduct" :disabled="buttonStatus">儲存</button>
-                        <button type="button" class="btn btn-secondary" @click="hideModal" :disabled="buttonStatus">取消</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    </script>
-
-    <!-- 確認刪除視窗 -->
-
-    <script type="text/x-template" id="confirm-modal">
-
-    <div class="modal fade" aria-hidden="true" tabindex="-1" id="remove-modal">
-        <div class="modal-dialog modal-dialog-centered">
-            <div class="modal-content">
-                <div class="d-flex flex-column justify-content-between p-5">
-                    <div class="mb-4">
-                        <h3 class="mb-4">確定刪除商品？</h3>
-                        <p>您要刪除的商品是：<span class="fw-bold">{{ tempProduct.title }}</span></p>
-                        <img class="w-100 mb-3" :src="tempProduct.imageUrl" :alt="tempProduct.title">
-                        <p class="text-muted">注意：<span class="text-danger fw-bold">此操作無法復原！</span>你要確定欸！</p>
-                    </div>
-                    <div>
-                        <button type="button" class="btn btn-danger me-3" @click="removeProduct" :disabled="buttonStatus">確定</button>
-                        <button type="button" class="btn btn-secondary" @click="hideModal" :disabled="buttonStatus">取消</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    </script>
 
     <script src='https://cdnjs.cloudflare.com/ajax/libs/axios/1.6.5/axios.min.js' integrity='sha512-TjBzDQIDnc6pWyeM1bhMnDxtWH0QpOXMcVooglXrali/Tj7W569/wd4E8EDjk1CwOAOPSJon1VfcEt1BI4xIrA==' crossorigin='anonymous'></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/js/bootstrap.bundle.min.js' integrity='sha512-X/YkDZyjTf4wyc2Vy16YGCPHwAY8rZJY+POgokZjQB2mhIRFJCckEGc6YyX9eNsPfn0PzThEuNs+uaomE5CO6A==' crossorigin='anonymous'></script>
